Footer phone number was wrapping, fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1078,7 +1078,7 @@ body {
 }
 
 #footer-holder>div:last-child {
-  width:25%;
+  width:30%;
 }
 
 
